--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: ✨ 패키지 설치
         working-directory: ./
-        run: npm i
+        run: npm install
 
       - name: ✨ 빌드 과정을 시작
         working-directory: ./
