--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "start:posts": " babel-node src/modules/posts/posts.module.js",
     "start:admin": "babel-node src/modules/admin/admin.module.js",
     "start:threads": " babel-node src/modules/threads/threads.module.js",
-    "start:gate_build": "babel-node dist/app.js",
-    "start:dis_build": "babel-node dist/modules/distributor.js",
-    "start:users_build": "babel-node dist/modules/users/users.module.js",
-    "start:posts_build": "babel-node dist/modules/posts/posts.module.js",
-    "start:admin_build": " babel-node dist/modules/admin/admin.module.js",
-    "start:threads_build": "babel-node dist/modules/threads/threads.module.js",
+    "start:gate_build": "node dist/app.js",
+    "start:dis_build": "node dist/modules/distributor.js",
+    "start:users_build": "node dist/modules/users/users.module.js",
+    "start:posts_build": "node dist/modules/posts/posts.module.js",
+    "start:admin_build": "node dist/modules/admin/admin.module.js",
+    "start:threads_build": "node dist/modules/threads/threads.module.js",
     "start": "concurrently \"npm run start:gate\" \"npm run start:dis\" \"npm run start:users\" \"npm run start:posts\"  \"npm run start:admin\"  \"npm run start:threads\"",
-    "start:build": "concurrently \"npm run start:gate_build\" \"npm run start:dis_build\" \"npm run start:users_build\" \"npm run start:posts_build\"  \"npm run start:admin_build\"  \"npm run start:threads_build\"",
     "build": " babel src --out-dir dist --copy-files "
   },
   "author": "",
