--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,7 +98,7 @@ jobs:
           echo "const config = {" >> config.js
           echo "client_id: '$client_id' ," >> config.js
           echo "client_secret: '$client_secret' , " >> config.js
-          echo "grant_type: '$authorization_code' ," >> config.js
+          echo "grant_type: 'authorization_code' ," >> config.js
           echo "redirect_uri: '$redirect_uri' ," >> config.js
           echo "code," >> config.js
           echo "};" >> config.js
