--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
