--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "template for microservice ",
   "main": "src/init.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --forceExit",
-    "test:silent": "NODE_ENV=test jest --silent --forceExit",
-    "test:coverage": "NODE_ENV=test jest --coverage --forceExit",
-    "test:integration": "NODE_ENV=test jest __tests__/integration --forceExit",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test:silent": "cross-env NODE_ENV=test jest --silent --detectOpenHandles --forceExit",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles --forceExit",
+    "test:integration": "cross-env NODE_ENV=test jest __tests__/integration --detectOpenHandles --forceExit",
     "start:gate": "babel-node src/app.js",
     "start:dis": " babel-node src/modules/distributor.js",
     "start:users": "babel-node src/modules/users/users.module.js",
@@ -42,6 +42,7 @@
     "@babel/core": "^7.22.10",
     "@babel/node": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
+    "cross-env": "^7.0.3",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2"
