--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "querystring": "^0.2.1",
     "redis": "^4.6.7",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
