feat : 유저 서비스 테스트 코드 내정보 조회 추가

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "template for microservice ",
   "main": "src/init.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
-    "test:silent": "cross-env NODE_ENV=test jest --silent --detectOpenHandles --forceExit",
-    "test:coverage": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles --forceExit",
-    "test:integration": "cross-env NODE_ENV=test jest __tests__/integration --detectOpenHandles --forceExit",
+    "test": "cross-env NODE_ENV=test jest --forceExit",
+    "test:silent": "cross-env NODE_ENV=test jest --silent  --forceExit",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage  --forceExit",
+    "test:integration": "cross-env NODE_ENV=test jest __tests__/integration  --forceExit",
     "start:gate": "babel-node src/app.js",
     "start:dis": " babel-node src/modules/distributor.js",
     "start:users": "babel-node src/modules/users/users.module.js",
