fix : 채팅 MongoDB 수정

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
           echo S3_AWS_SECRET_ACCESS_KEY=${{ secrets.S3_AWS_SECRET_ACCESS_KEY }} >> .env
           echo S3_AWS_REGION=${{ secrets.S3_AWS_REGION }} >> .env
           echo S3_AWS_BUCKET_NAME=${{ secrets.S3_AWS_BUCKET_NAME }} >> .env
+          echo MONGO_DB=${{ secrets.MONGO_DB }} >> .env
 
           cat .env
 
