--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.5",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "ws": "^8.14.0"
   },
   "devDependencies": {
