--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "microservice-tcp-nbc",
   "version": "1.0.0",
   "description": "template for microservice ",
-  "main": "src/init.js",
+  "private": true,
   "scripts": {
     "test:post": "cross-env NODE_ENV=testpost jest posts.integration.spec.js   --forceExit",
     "test:users": "cross-env NODE_ENV=test jest users.integration.spec.js   --forceExit",
@@ -13,13 +13,13 @@
     "start:admin": "babel-node src/modules/admin/admin.module.js",
     "start:threads": " babel-node src/modules/threads/threads.module.js",
     "start:chat": " babel-node src/modules/chat/chat.module.js",
-    "start:gate_build": "node dist/app.js",
-    "start:dis_build": "node dist/modules/distributor.js",
-    "start:users_build": "node dist/modules/users/users.module.js",
-    "start:posts_build": "node dist/modules/posts/posts.module.js",
-    "start:admin_build": "node dist/modules/admin/admin.module.js",
-    "start:threads_build": "node dist/modules/threads/threads.module.js",
-    "start:chat_build": "node dist/modules/chat/chat.module.js",
+    "start:gate_build": "babel-node dist/app.js",
+    "start:dis_build": "babel-node dist/modules/distributor.js",
+    "start:users_build": "babel-node dist/modules/users/users.module.js",
+    "start:posts_build": "babel-node dist/modules/posts/posts.module.js",
+    "start:admin_build": "babel-node dist/modules/admin/admin.module.js",
+    "start:threads_build": "babel-node dist/modules/threads/threads.module.js",
+    "start:chat_build": "babel-node dist/modules/chat/chat.module.js",
     "start": "concurrently \"npm run start:gate\" \"npm run start:dis\" \"npm run start:users\" \"npm run start:posts\"  \"npm run start:admin\"  \"npm run start:threads\"  \"npm run start:chat\"",
     "build": " babel src --out-dir dist --copy-files "
   },
@@ -32,10 +32,14 @@
     "dotenv": "^16.3.1",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "querystring": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.5",
@@ -45,12 +49,16 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
-    "@babel/core": "^7.22.10",
+    "@babel/core": "^7.23.2",
     "@babel/node": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.2"
+    "prettier": "^3.0.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
