--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,3 +72,7 @@ jobs:
       - name: ✨ 빌드 과정을 시작
         working-directory: ./
         run: npm run build
+
+      - name: ✨ 웹팩
+        working-directory: ./
+        run: npx webpack
