--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "template for microservice ",
   "private": true,
   "scripts": {
-    "test:post": "cross-env NODE_ENV=testpost jest posts.integration.spec.js   --forceExit",
-    "test:users": "cross-env NODE_ENV=test jest users.integration.spec.js   --forceExit",
+    "test": "concurrently \"babel-node __tests__/integration/mock.users.module.js\" \"cross-env NODE_ENV=testpost jest users.integration.spec.js   --forceExit\"",
     "start:gate": "babel-node src/app.js",
     "start:dis": " babel-node src/modules/distributor.js",
     "start:users": "babel-node src/modules/users/users.module.js",
