--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "sequelize": "^6.32.1",
     "sharp": "^0.32.5",
     "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1",
+    "winston-elasticsearch": "^0.17.4",
     "ws": "^8.14.0"
   },
   "devDependencies": {
