--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
