feat : React Render
리액트 파일 gate port에서 정상적으로 렌더 및 작동하게 만듬

--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "start:admin": "babel-node src/modules/admin/admin.module.js",
     "start:threads": " babel-node src/modules/threads/threads.module.js",
     "start:chat": " babel-node src/modules/chat/chat.module.js",
-    "start:gate_build": "babel-node dist/app.js",
-    "start:dis_build": "babel-node dist/modules/distributor.js",
-    "start:users_build": "babel-node dist/modules/users/users.module.js",
-    "start:posts_build": "babel-node dist/modules/posts/posts.module.js",
-    "start:admin_build": "babel-node dist/modules/admin/admin.module.js",
-    "start:threads_build": "babel-node dist/modules/threads/threads.module.js",
-    "start:chat_build": "babel-node dist/modules/chat/chat.module.js",
+    "start:gate_build": "node dist/app.js",
+    "start:dis_build": "  node dist/modules/distributor.js",
+    "start:users_build": "  node dist/modules/users/users.module.js",
+    "start:posts_build": " node dist/modules/posts/posts.module.js",
+    "start:admin_build": " node dist/modules/admin/admin.module.js",
+    "start:threads_build": " node dist/modules/threads/threads.module.js",
+    "start:chat_build": " node dist/modules/chat/chat.module.js",
     "start": "concurrently \"npm run start:gate\" \"npm run start:dis\" \"npm run start:users\" \"npm run start:posts\"  \"npm run start:admin\"  \"npm run start:threads\"  \"npm run start:chat\"",
-    "build": " babel src --out-dir dist --copy-files "
+    "start_build": "concurrently \"npm run start:gate_build\" \"npm run start:dis_build\" \"npm run start:users_build\" \"npm run start:posts_build\"  \"npm run start:admin_build\"  \"npm run start:threads_build\"  \"npm run start:chat_build\"",
+    "build": " concurrently \"babel src --out-dir dist --copy-files\" \"npx webpack\" "
   },
   "author": "",
   "license": "ISC",
@@ -36,9 +37,10 @@
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "querystring": "^0.2.1",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
