--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
     "redis": "^4.6.7",
