--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,16 @@ jobs:
           echo ES_ADDON_URI=${{ secrets.ES_ADDON_URI }} >> .env
           echo ES_ADDON_USER=${{ secrets.ES_ADDON_USER }} >> .env
           echo LOG_SOURCE=${{ secrets.LOG_SOURCE }} >> .env
+          echo KAKAO_JS_KEY=${{ secrets.KAKAO_JS_KEY }} >> .env
+          echo KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} >> .env
+          echo KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }} >> .env
+          echo KAKAO_GRANT_TYPE=${{ secrets.KAKAO_GRANT_TYPE }} >> .env
+          echo KAKAO_REDIRECT_URI=${{ secrets.KAKAO_REDIRECT_URI }} >> .env
+          echo MOCK_POSTS_PORT=${{ secrets.MOCK_POSTS_PORT }} >> .env
+          echo MOCK_THREADS_PORT=${{ secrets.MOCK_THREADS_PORT }} >> .env
+          echo MOCK_USERS_PORT=${{ secrets.MOCK_USERS_PORT }} >> .env
+
+
 
 
 
