--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,13 @@ jobs:
           ES_ADDON_URI: ${{secrets.ES_ADDON_URI}}
           ES_ADDON_USER: ${{secrets.ES_ADDON_USER}}
           LOG_SOURCE: ${{secrets.LOG_SOURCE}}
+
+          KAKAO_JS_KEY: ${{secrets.KAKAO_JS_KEY}}
+          KAKAO_CLIENT_ID: ${{secrets.KAKAO_CLIENT_ID}}
+          KAKAO_CLIENT_SECRET: ${{secrets.KAKAO_CLIENT_SECRET}}
+          KAKAO_GRANT_TYPE: ${{secrets.KAKAO_GRANT_TYPE}}
+          KAKAO_REDIRECT_URI: ${{secrets.KAKAO_REDIRECT_URI}}
+
         run: |
           pwd
           touch .env
@@ -110,22 +117,12 @@ jobs:
           echo "ES_ADDON_URI=$ES_ADDON_URI" >> .env
           echo "ES_ADDON_USER=$ES_ADDON_USER" >> .env
           echo "LOG_SOURCE=$LOG_SOURCE" >> .env
+          echo "KAKAO_JS_KEY=$KAKAO_JS_KEY" >> .env
+          echo "KAKAO_CLIENT_ID=$KAKAO_CLIENT_ID" >> .env
+          echo "KAKAO_CLIENT_SECRET=$KAKAO_CLIENT_SECRET" >> .env
+          echo "KAKAO_GRANT_TYPE=$KAKAO_GRANT_TYPE" >> .env
+          echo "KAKAO_REDIRECT_URI=$KAKAO_REDIRECT_URI" >> .env
           cat .env
-
-          cd ./src/public/js
-          touch config.js
-          echo "const urlParams = new URL(location.href).searchParams;" >> config.js
-          echo "const kCode = urlParams.get('code');" >> config.js
-          echo "const config = {" >> config.js
-          echo "client_id: '$client_id' ," >> config.js
-          echo "client_secret: '$client_secret' , " >> config.js
-          echo "grant_type: 'authorization_code' ," >> config.js
-          echo "redirect_uri: '$redirect_uri' ," >> config.js
-          echo "code: kCode," >> config.js
-          echo "};" >> config.js
-          echo "const kakaoJSkey = '$kakaoJSkey' ;" >> config.js
-
-          cat config.js
 
       - name: ✨ 패키지 설치
         working-directory: ./
