--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
+    "file-loader": "^6.2.0",
     "jest": "^29.6.4",
     "nodemon": "^3.0.2",
     "prettier": "^3.0.2",
+    "svg-loader": "^0.0.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
