--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1451.0",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
