--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "aws-sdk": "^2.1451.0",
     "bcrypt": "^5.1.1",
+    "compression-webpack-plugin": "^11.0.0",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "formidable": "^3.5.1",
@@ -69,7 +70,7 @@
     "nodemon": "^3.0.2",
     "prettier": "^3.0.2",
     "svg-loader": "^0.0.2",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
