--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "aws-sdk": "^2.1451.0",
     "bcrypt": "^5.1.1",
+    "compression-webpack-plugin": "^11.0.0",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "formidable": "^3.5.1",
